fixed bug where the zoom image would not be shown fully, easiest to see with first horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,6 @@
   color: rgb(0,0,0,0);
   user-select: none;
   pointer-events: none;
-  font-size: 1px;
 }
 
 table {
